--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_CONVERTER_API_URL=http://localhost:8000/converter/convert_length/
+
+
+NEXT_PUBLIC_CONVERTER_API_URL = 'http://127.0.0.1:8000/convert/convert_units/';
