--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-
-
 NEXT_PUBLIC_CONVERTER_API_URL = 'http://127.0.0.1:8000/convert/convert_units/';
+NEXT_PUBLIC_API_URL= 'https://agile-chamber-63259-f06a567fe59d.herokuapp.com/api/'
